# MandelbrotUnix

./: CMakeLists.txt  README.md
include/: mandel_txt.h
src/: mandel_txt.c  mandel_txt_hrv.c
